fix(hatchery): Hatchery scrollbar in Hatchery Helpers and Help tabs (#4156)
* Update breedingModal.html

* Fix breakpoint incompatibility

* Added a fixed font size to Pokedex/Hatchery titles due Cyborg theme h4 font size

---------

--- a/src/styles/breeding.less
+++ b/src/styles/breeding.less
@@ -313,7 +313,7 @@
     overflow-y: auto;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .scrolling-div-breeding-list {
       height: calc(100vh - 190px);
   }
@@ -323,7 +323,7 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   .scrolling-div-breeding-list {
       height: calc(100vh - 300px);
   }
